# capnproto

./: .gitmodules
c++/: CMakeLists.txt
c++/cmake/: CapnProtoConfig.cmake.in
c++/pkgconfig/: kj-noise.pc.in
c++/src/capnp/: CMakeLists.txt  capability.c++  capability.h  membrane.c++  rpc-noise.c++  rpc-noise.capnp  rpc-noise.capnp.c++  rpc-noise.capnp.h  rpc-noise.h  rpc-prelude.h  rpc.c++  rpc.capnp  rpc.capnp.c++  rpc.capnp.h  rpc.h
c++/src/kj/: CMakeLists.txt  async-io.c++  async-io.h  async.c++  cidr.c++  exception.c++
c++/src/kj/compat/: noise.c++  noise.h
c++/src/kj/compat/noise/: CMakeLists.txt
